Update autoload configuration in composer.json
Removed PSR-4 autoloading and now explicitly autoloads CheckLogs.php and src/functions.php using the 'files' directive.

--- a/composer.json
+++ b/composer.json
@@ -23,10 +23,8 @@
         "ext-json": "*"
     },
     "autoload": {
-        "psr-4": {
-            "CheckLogs\\": "./"
-        },
         "files": [
+            "CheckLogs.php",
             "src/functions.php"
         ]
     },
